--- a/QL_Cafe/nbproject/project.properties
+++ b/QL_Cafe/nbproject/project.properties
@@ -43,7 +43,10 @@ javac.classpath=\
     ${file.reference.jl1.0.1.jar}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.mssql-jdbc-7.0.0.jre8.jar}
+    ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
+    ${libs.Jasperreport.classpath}:\
+    ${libs.Jaspereport.classpath}:\
+    ${libs.JasperReports.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
