--- a/QL_Cafe/nbproject/project.properties
+++ b/QL_Cafe/nbproject/project.properties
@@ -30,10 +30,22 @@ dist.jar=${dist.dir}/QL_Cafe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=C:\\JAVA\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=C:\\JAVA\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=C:\\JAVA\\commons-digester-1.7.jar
+file.reference.commons-logging-1.1.2.jar=C:\\JAVA\\commons-logging-1.1.2.jar
 file.reference.DateChooser.jar=JdateChooser/DateChooser.jar
+file.reference.groovy-all-2.0.1.jar=C:\\JAVA\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=C:\\JAVA\\iText-2.1.7.js2.jar
+file.reference.itextpdf-5.1.0.jar=C:\\JAVA\\itextpdf-5.1.0.jar
+file.reference.jasper-compiler-jdt.jar=C:\\JAVA\\jasper-compiler-jdt.jar
+file.reference.jasperreports-5.0.1.jar=C:\\JAVA\\jasperreports-5.0.1.jar
+file.reference.jcommon.jar=C:\\JAVA\\jcommon.jar
+file.reference.jfreechart-1.0.19.jar=C:\\JAVA\\jfreechart-1.0.19.jar
 file.reference.jl1.0.1.jar=jlayer1.0.1/JLayer1.0.1/jl1.0.1.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar=C:\\JAVA\\QL_Cafe\\mssql-jdbc-7.0.0.jre8.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\JAVA\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar-1=C:\\JAVA\\mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -46,7 +58,18 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
     ${libs.Jasperreport.classpath}:\
     ${libs.Jaspereport.classpath}:\
-    ${libs.JasperReports.classpath}
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.jasper-compiler-jdt.jar}:\
+    ${file.reference.jasperreports-5.0.1.jar}:\
+    ${file.reference.jcommon.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
